ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/PRM_Comment__c.object-meta.xml
<CustomObject>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Capture the Plant Reporting Module (PRM) comments by Plant Team.</description>
    <label>PRM Comment</label>
    <nameField>
        <displayFormat>PRMComment-{00000}</displayFormat>
        <label>PRM Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>