ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Case Number</description>
    <formula>Lab_Sample__r.Case__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Number</inlineHelpText>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>