ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Claim Number</description>
    <formula>Lab_Sample__r.Case__r.Claim_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Claim Number</inlineHelpText>
    <label>Claim Number</label>
    <type>Text</type>
</CustomField>