ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Date_Sample_Received_By_Plant__c.field-meta.xml
<CustomField>
    <fullName>Date_Sample_Received_By_Plant__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-90
Indicates when the Plant received a sample from the Lab.</description>
    <inlineHelpText>Indicates when the Plant received a sample from the Lab.</inlineHelpText>
    <label>Date Sample Received By Plant</label>
    <type>Date</type>
</CustomField>