ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Lab_Sample__c.field-meta.xml
<CustomField>
    <fullName>Lab_Sample__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Master Details Relationship with Lab Sample</description>
    <inlineHelpText>Link PRM Comment to Lab Sample</inlineHelpText>
    <label>Lab Sample</label>
    <referenceTo>Lab_Sample__c</referenceTo>
    <relationshipLabel>PRM Comments</relationshipLabel>
    <relationshipName>PRM_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>