ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Plant_Manager__c.field-meta.xml
<CustomField>
    <fullName>Plant_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CLAIMS - 626. Populated with Plant Manager&apos;s user id to be used in approval proces</description>
    <label>Plant Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PRM_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>