ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/PRM__c.field-meta.xml
<CustomField>
    <fullName>PRM__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Lab Sample PRM</description>
    <formula>Lab_Sample__r.PRM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lab Sample PRM</inlineHelpText>
    <label>PRM</label>
    <type>Checkbox</type>
</CustomField>