ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/PRM_Approval_Submitter__c.field-meta.xml
<CustomField>
    <fullName>PRM_Approval_Submitter__c</fullName>
    <description>CLAIMS - 626. Populated by the initial actions of the PRM Approval process</description>
    <label>PRM Approval Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>