ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/PRM_Approved__c.field-meta.xml
<CustomField>
    <fullName>PRM_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Indicates whether the PRM Comment is approved.</description>
    <inlineHelpText>Indicates whether the PRM Comment is approved.</inlineHelpText>
    <label>PRM Approved</label>
    <type>Checkbox</type>
</CustomField>