ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Product Number</description>
    <formula>Lab_Sample__r.Case__r.Product_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Number</inlineHelpText>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>