ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Product_Colour__c.field-meta.xml
<CustomField>
    <fullName>Product_Colour__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Product Colour</description>
    <formula>Lab_Sample__r.Case__r.Product_Colour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Colour</inlineHelpText>
    <label>Product Colour</label>
    <type>Text</type>
</CustomField>