ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Product Name</description>
    <formula>Lab_Sample__r.Case__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Name</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>