ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/validationRules/ApprovedPRMCommentCannotBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>ApprovedPRMCommentCannotBeModified</fullName>
    <active>true</active>
    <description>https://ikoussfsc.atlassian.net/browse/CLAIMSV2-66
Prevent all users (except System Administrator and Lab Manager profiles) from modifying approved PRM Comment records</description>
    <errorConditionFormula>$Profile.Name != &apos;System Administrator&apos; &amp;&amp; $Profile.Name != &apos;Lab Manager&apos; &amp;&amp;  PRM_Approved__c</errorConditionFormula>
    <errorMessage>Can not modify approved PRM Comment.</errorMessage>
</ValidationRule>