ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/PRM_Comment__c/listViews/All_Lab_Sample_Comments.listView-meta.xml
<ListView>
    <fullName>All_Lab_Sample_Comments</fullName>
    <columns>NAME</columns>
    <columns>Case_Number__c</columns>
    <columns>Claim_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Colour__c</columns>
    <columns>Product_Code__c</columns>
    <columns>PRM_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRM__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Lab Sample Comments</label>
</ListView>